Fix some layout problem and the remote media requisition

--- a/client/src/components/media/Media.css
+++ b/client/src/components/media/Media.css
@@ -2,11 +2,9 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  opacity: 0.7;
   z-index: 10;
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
   right: 0;
 }
@@ -15,7 +13,6 @@
 }
 video {
   object-fit: cover;
-  background-color: black;
   width:100%;
   height:100%;
 }
